# 2014-engine-research

trunk/ENGINERESEARCH/: CMakeLists.txt
trunk/ENGINERESEARCH/ANDROID/: CMakeCache.txt  Makefile  cmake_install.cmake
trunk/ENGINERESEARCH/ANDROID/CATFISH/: Makefile  cmake_install.cmake
trunk/ENGINERESEARCH/ANDROID/FreeImage/: Makefile  cmake_install.cmake
trunk/ENGINERESEARCH/ANDROID/lua-5.2.2/: Makefile  cmake_install.cmake
trunk/ENGINERESEARCH/ANDROID_SHELL/proj.android/: .cproject  .project  AndroidManifest.xml  auto_make_apk.bat  build.xml  make_apk_updateProject.bat
trunk/ENGINERESEARCH/BuildConfig/: AndroidBuildConfig.cmake  AndroidToolChain.cmake  Macros.cmake  WindowsBuildConfig.cmake
trunk/ENGINERESEARCH/CATFISH/: CMakeLists.txt  GLESWORK.sln
trunk/ENGINERESEARCH/CATFISH/App/: App.vcxproj  App.vcxproj.filters  Button.cpp  Button.h  EngineShell.cpp  EngineShell.h  GameApp.cpp  GameApp.h  Input.cpp  Input.h  Timer.cpp  Timer.h
trunk/ENGINERESEARCH/CATFISH/Base/: Base.vcxproj
trunk/ENGINERESEARCH/CATFISH/Common/: Debug.h
trunk/ENGINERESEARCH/CATFISH/Debug/: CL.read.1.tlog  CL.write.1.tlog  Demo.exp  Demo.ilk  Demo.lib  Font.lib  FreeImage.2005.vcxprojResolveAssemblyReference.cache  FreeImage.res  FreeImage.write.1.tlog  FreeImage_manifest.rc  FreeImaged.lib  Game.lib  GlesSystem.exp  GlesSystem.ilk  GlesSystem.lib  GraphicSystem.exp  GraphicSystem.ilk  GraphicSystem.lib  IO.exp  IO.ilk  IO.lib  LUAMSVC.exp  LUAMSVC.ilk  LUAMSVC.lib  Math.exp  Math.ilk  Math.lib  ResourcePhraser.exp  ResourcePhraser.ilk  ResourcePhraser.lib  SoundSystem.lib  Sprite2D.lib  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
trunk/ENGINERESEARCH/CATFISH/Demo/: CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters  main.cpp
trunk/ENGINERESEARCH/CATFISH/DemoA/: CMakeLists.txt  main.cpp
trunk/ENGINERESEARCH/CATFISH/Font/: Font.cpp  Font.h  Font.vcxproj  Font.vcxproj.filters  FontDllCommon.h
trunk/ENGINERESEARCH/CATFISH/GLESWORK/: GLESWORK.vcxproj
trunk/ENGINERESEARCH/CATFISH/Game/: ClickToStart.cpp  ClickToStart.h  Game.vcxproj  Game.vcxproj.filters  GameState.h  MikuGame.cpp  MikuGame.h  MikuRhythmStage.cpp  MikuRhythmStage.h  RhythmGame.cpp  RhythmGame.h  ScoreBoard.cpp  ScoreBoard.h  Selector.cpp  Selector.h  StageLoader.cpp  StageLoader.h  StrUtil.cpp  StrUtil.h  SubTitleLoader.cpp  SubTitleLoader.h
trunk/ENGINERESEARCH/CATFISH/GlesSystem/: CMakeLists.txt  DrawEnums.cpp  DrawEnums.h  FrameBufferObj.cpp  FrameBufferObj.h  GDebug.cpp  GDebug.h  GDllCommon.h  GlesDevice.cpp  GlesDevice.h  GlesSyetem.vcxproj  GlesSyetem.vcxproj.filters  GpuProgram.cpp  GpuProgram.h  IndexBufferObj.cpp  IndexBufferObj.h  OpenglHeader.h  PlatformDiff.cpp  PlatformDiff.h  PrimitiveGroup.cpp  PrimitiveGroup.h  ReadMe.txt  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBufferObj.cpp  VertexBufferObj.h  VertexLayout.cpp  VertexLayout.h
trunk/ENGINERESEARCH/CATFISH/GraphicSystem/: Camera.cpp  Camera.h  Culler.cpp  Culler.h  Culler2D.cpp  Culler2D.h  CullerQuadTree.cpp  CullerQuadTree.h  DirectionalLight.cpp  DirectionalLight.h  ForwardRenderPipeline.cpp  ForwardRenderPipeline.h  GraphicDllCommon.h  GraphicSystem.vcxproj  GraphicSystem.vcxproj.filters  Light.cpp  Light.h  Material.cpp  Material.h  ParamContainer.cpp  ParamContainer.h  PointLight.cpp  PointLight.h  RenderPipeline.cpp  RenderPipeline.h  RenderUnit.cpp  RenderUnit.h  SimplePipeline.cpp  SimplePipeline.h  SpotLight.cpp  SpotLight.h
trunk/ENGINERESEARCH/CATFISH/IO/: CMakeLists.txt  FileReader.cpp  FileReader.h  IO.vcxproj  IO.vcxproj.filters  IODLLCOMMON.h  MemoryReader.cpp  MemoryReader.h
trunk/ENGINERESEARCH/CATFISH/Math/: BSphere.cpp  BSphere.h  BoxAABB.cpp  BoxAABB.h  ClipStatus.h  CommonMath.h  Frustum.cpp  Frustum.h  Math.vcxproj  Math.vcxproj.filters  MathDllCommon.h  QuatTree.h  cmlmath.h  hash.h  vector2.h
trunk/ENGINERESEARCH/CATFISH/Media/: Root.lua  fuck.txt  knight1BoundingBox.mesh  knight1v_body.mesh  st.txt  xique.mesh
trunk/ENGINERESEARCH/CATFISH/ResourcePhraser/: CMakeLists.txt  ImagePhaser.cpp  ImagePhaser.h  ImageRes.cpp  ImageRes.h  MeshRes.cpp  MeshRes.h  ObjMeshPhraser.cpp  ObjMeshPhraser.h  RDllCommon.h  Res.cpp  Res.h  ResMgr.cpp  ResMgr.h  ResourcePhraser.vcxproj  ResourcePhraser.vcxproj.filters  ShaderRes.cpp  ShaderRes.h  SoundRes.cpp  SoundRes.h
trunk/ENGINERESEARCH/CATFISH/ScriptSystem/: CMakeLists.txt  LuaBind.cpp  LuaBind.h  LuaDomain.cpp  LuaDomain.h  LuaRootScript.cpp  LuaRootScript.h  LuaScript.cpp  LuaScript.h  LuaUtitly.cpp  LuaUtitly.h  SDLLCommon.h  ScriptDefines.h  ScriptFooWarpper.cpp  ScriptFooWarpper.h  ScriptObjWarpper.h  ScriptSys.cpp  ScriptSys.h  ScriptSystem.vcxproj  ScriptSystem.vcxproj.filters
trunk/ENGINERESEARCH/CATFISH/SoundSystem/: CMakeLists.txt  ReadMe.txt  Sound.cpp  Sound.h  SoundAL.cpp  SoundAL.h  SoundData.h  SoundDecoderAL.cpp  SoundDecoderAL.h  SoundDllCommon.h  SoundSL.cpp  SoundSL.h  SoundSystem.cpp  SoundSystem.h  SoundSystem.vcxproj  SoundSystem.vcxproj.filters  SoundSystemAL.cpp  SoundSystemAL.h  SoundSystemSL.cpp  SoundSystemSL.h
trunk/ENGINERESEARCH/CATFISH/Sprite2D/: Anime2D.cpp  Anime2D.h  Lable.cpp  Lable.h  Primitive2D.cpp  Primitive2D.h  Sprite2D.cpp  Sprite2D.h  Sprite2D.vcxproj  Sprite2D.vcxproj.filters  Sprite2DPipeLine.cpp  Sprite2DPipeLine.h  cavans.cpp  cavans.h
trunk/ENGINERESEARCH/CATFISH/Thread/: CriticalSection.cpp  CriticalSection.h  Event.cpp  Event.h  Interlocked.cpp  Interlocked.h  Job.cpp  Job.h  JobMgr.cpp  (+5 more)
trunk/ENGINERESEARCH/FreeImage/: CMakeLists.txt  FreeImage.2005.sln  FreeImage.2005.suo.old  FreeImage.2005.vcxproj  FreeImage.2005.vcxproj.filters  UpgradeLog.XML
trunk/ENGINERESEARCH/GLESEmulator/: EULA.rtf
trunk/ENGINERESEARCH/OpenAL/: ALu.c  OpenAL.sln  OpenAL.vcxproj  OpenAL.vcxproj.filters  al.h
trunk/ENGINERESEARCH/ShaderGernerator/: ShaderGernerator.sln
trunk/ENGINERESEARCH/VSSLN/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CATFISH.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
(+600 files in other folders)
