
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
  
PROJECT ( CATFISH )

#choose a perform
OPTION( ANDROID_BUILD "build android edition" FALSE )
OPTION( WINDOWS_BUILD "build windows edition" FALSE )

#Compile option
OPTION( ANDROID_OPTIMIZED "turn on optimized or not" FALSE )
OPTION( ANDROID_NDEBUG "set NDEBUG macro or not" FALSE )


IF( WIN32 AND NOT ANDOIRD_BUILD )
	Set( WINDOWS_BUILD TRUE CACHE BOOL "" FORCE)
ENDIF ( WIN32 AND NOT ANDOIRD_BUILD ) 
# debug
MESSAGE( STATUS "CMAKE_SOURECE_DIR:" ${CMAKE_SOURCE_DIR} )
MESSAGE( STATUS "PROJECT_SOURCE_DIR:" ${PROJECT_SOURCE_DIR} )
MESSAGE( STATUS "PROJECT_BIN_DIR:" ${PROJECT_BINARY_DIR} )

### binary dir should not be the same with the source dir
IF ( ${PROJECT_SOURCE_DIR} STREQUAL ${PROJECT_BINARY_DIR} )	
	MESSAGE( STATUS "Binary directory:" ${PROJECT_BINARY_DIR} )
	MESSAGE( STATUS "Source code directory:" ${PROJECT_SOURCE_DIR} )

	MESSAGE( FATAL_ERROR "Binary directory should not be the same with Source code directory!!!" )
ENDIF( )

#check if 
IF ( NOT ANDROID_BUILD AND
	NOT WINDOWS_BUILD )
	MESSAGE( FATAL_ERROR "Should choose a platform!" )	
ENDIF()

# set moudule path
SET( CMAKE_MODULE_PATH   "${CMAKE_SOURCE_DIR}/BuildConfig" )

IF ( WINDOWS_BUILD )
	SET( MS_COMPILER TURE )

	INCLUDE ( ${CMAKE_MODULE_PATH}/WindowsBuildConfig.cmake )
ENDIF ( WINDOWS_BUILD )

IF ( ANDROID_BUILD )
	SET( GCC_COMPILER TURE )

	INCLUDE ( ${CMAKE_MODULE_PATH}/AndroidBuildConfig.cmake )
ENDIF( ANDROID_BUILD )

#add subdirectories
ADD_SUBDIRECTORY( CATFISH )

ADD_SUBDIRECTORY( FreeImage )

ADD_SUBDIRECTORY( FreeImage/Source/LibJPEG )

ADD_SUBDIRECTORY( FreeImage/Source/LibMNG )

ADD_SUBDIRECTORY( FreeImage/Source/LibPNG )

ADD_SUBDIRECTORY( FreeImage/Source/LibOpenJPEG )

ADD_SUBDIRECTORY( FreeImage/Source/LibTIFF )

ADD_SUBDIRECTORY( FreeImage/Source/OpenEXR )

ADD_SUBDIRECTORY( FreeImage/Source/ZLib )

ADD_SUBDIRECTORY( lua-5.2.2 )

ADD_SUBDIRECTORY( CATFISH/GlesSyetem )

ADD_SUBDIRECTORY( CATFISH/IO )

ADD_SUBDIRECTORY( CATFISH/ResourcePhraser )

ADD_SUBDIRECTORY( CATFISH/ScriptSystem )

ADD_SUBDIRECTORY( CATFISH/SoundSystem )
IF(WINDOWS_BUILD)
ADD_SUBDIRECTORY( CATFISH/Demo )
ELSE(WINDOWS_BUILD)
ADD_SUBDIRECTORY( CATFISH/DemoA )
ENDIF(WINDOWS_BUILD)